--- a/pertemuan10.html
+++ b/pertemuan10.html
@@ -113,8 +113,10 @@
                         <pre><code class="python" data-trim>
 s = "  Hello Python  "
 
-print(s.upper())      # "  HELLO PYTHON  "
-print(s.strip())      # "Hello Python"
+print(s.upper()) 
+# "  HELLO PYTHON  "
+print(s.strip()) 
+# "Hello Python"
 print(s.replace("o", "a")) 
 # "  Hella Pythan  "
                             </code></pre>
@@ -209,7 +211,7 @@ print(f"Rp {uang:,}")  # Rp 5,000,000
                 </ul>
             </section>
 
-            <!-- === SLIDE 10: TUGAS === -->
+            <!-- === SLIDE 10: TUGAS UTAMA === -->
             <section>
                 <h3>Tugas Pertemuan 10 <i class="bi bi-list-check"></i></h3>
                 <div class="card card-warning text-left">
@@ -222,12 +224,47 @@ print(f"Rp {uang:,}")  # Rp 5,000,000
                             <br>Syarat: Min 8 karakter, ada angka, ada huruf besar.
                         </li>
                     </ol>
-                    <hr>
-                    <p class="text-smaller"><strong>File:</strong> <code>Tugas10_NIM_Nama.py</code></p>
                 </div>
             </section>
 
-            <!-- === SLIDE 11: NEXT WEEK === -->
+            <!-- === SLIDE 11: PANDUAN PENGERJAAN === -->
+            <section>
+                <h3>Panduan Pengerjaan Tugas</h3>
+                <div class="card card-info text-left">
+                    <p class="text-small">Untuk memastikan pemahaman string manipulation, ikuti langkah-langkah berikut:</p>
+                    <ul class="text-smaller">
+                        <li><strong>Analisis String:</strong> Tentukan method string yang tepat untuk setiap tugas.</li>
+                        <li><strong>Desain Algoritma:</strong> Buat pseudocode dengan operasi string yang diperlukan.</li>
+                        <li><strong>Implementasi:</strong> Tulis kode dengan komentar jelas, gunakan method string yang tepat.</li>
+                        <li><strong>Testing:</strong> Jalankan dengan berbagai input untuk memastikan operasi string bekerja benar.</li>
+                        <li><strong>Refleksi:</strong> Tambahkan komentar untuk refleksi penggunaan string manipulation.</li>
+                        <li><strong>Dokumentasi:</strong> Jelaskan logika dan hasil di komentar kode.</li>
+                    </ul>
+                </div>
+            </section>
+
+            <!-- === SLIDE 12: PENGUMPULAN TUGAS === -->
+            <section>
+                <h3>Pengumpulan Tugas</h3>
+                <div class="card card-warning text-left">
+                    <div class="flex-container" style="align-items: center;">
+                        <div class="flex-col text-left">
+                            <p class="text-smaller"><strong>Instruksi:</strong></p>
+                            <ul class="text-smaller">
+                                <li>Simpan file: <code>Tugas10_NIM_Nama.ipynb</code></li>
+                                <li>Sertakan komentar dan output contoh di kode.</li>
+                                <li>Upload ke LMS sebelum deadline.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-col text-center">
+                            <div style="font-size: 3em;"><i class="bi bi-exclamation-triangle"></i></div>
+                            <p class="text-smaller"><strong>Deadline:</strong><br>H-1 Pertemuan Berikutnya</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- === SLIDE 13: NEXT WEEK === -->
             <section>
                 <h3>Pertemuan Berikutnya</h3>
                 <h4>Libraries & Modules <i class="bi bi-book"></i></h4>
@@ -240,10 +277,13 @@ print(f"Rp {uang:,}")  # Rp 5,000,000
                 </ul>
             </section>
 
-            <!-- === SLIDE 12: CLOSING === -->
+            <!-- === SLIDE 14: Q&A === -->
             <section>
                 <h1>Q & A</h1>
                 <p>Terima Kasih!</p>
+                <div class="text-smaller" style="margin-top: 50px; color: #666;">
+                    Sampai jumpa! <i class="bi bi-hand-wave"></i>
+                </div>
             </section>
 
         </div>
